Incluindo evidências de bugs (pasta Evidence) e ajuste no .gitignore

--- a/challenge-qa/.gitignore
+++ b/challenge-qa/.gitignore
@@ -17,9 +17,11 @@ obj/
 *.manifest
 
 # Relatórios / Evidências
-Evidence/
 *.html
 results/
+
+# Manter a pasta Evidence (não ignorar)
+!Evidence/
 
 # Configurações locais
 *.local.json
