--- a/challenge-qa/ChallengeQa.csproj
+++ b/challenge-qa/ChallengeQa.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Drivers\" />
-    <Folder Include="Evidence\" />
+    <Folder Include="Evidences\" />
     <Folder Include="performance-tests\results\" />
     <Folder Include="Support\" />
   </ItemGroup>
